Section-2-DevOps/Session-7_Kubernetes_OLD/7.6_services_networking/blue-green-demo.yaml
# Blue-Green Deployment Demo - Simple Version
---
# Blue Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
      version: blue
  template:
    metadata:
      labels:
        app: web-app
        version: blue
    spec:
      containers:
      - name: web
        image: varunmanik/httpd:blue
        ports:
        - containerPort: 80
---
# Green Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
      version: green
  template:
    metadata:
      labels:
        app: web-app
        version: green
    spec:
      containers:
      - name: web
        image: varunmanik/httpd:green
        ports:
        - containerPort: 80
---
# Service (initially points to blue)
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: web-app
    version: blue  # Initially points to blue
